--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=tiia-suporte
+
+# Traceroute Parameters
+traceroute.default.maxHops=30
+traceroute.default.timeout=4000
+traceroute.command.windows=tracert
+traceroute.command.linux=traceroute
+
+# Geolocalizacao API URL
+geolocalizacao.api.url=http://ip-api.com/json/
+
+# Ping Commands
+ping.command.windows=ping
+ping.command.linux=ping
