feat: Adiciona monitor de ping em tempo real e otimiza serviços de rede
- Adiciona a funcionalidade de Monitor de Ping em tempo real com WebSockets.

- Implementa thread pools dedicadas para DNS, Traceroute e Geolocalização, melhorando a performance e a estabilidade.

- Adiciona timeouts e rate limiting para os serviços de rede para prevenir abusos e falhas.

- Refatora o serviço de Traceroute para maior eficiência e para forçar o uso de IPv4.

- Adiciona tratamento de erro para excesso de requisições (rate limiting).

- Atualiza o cache do Service Worker e adiciona link para a nova página.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,15 +24,20 @@ resilience4j.ratelimiter.instances.portScan.limitForPeriod=10
 resilience4j.ratelimiter.instances.portScan.limitRefreshPeriod=60s
 resilience4j.ratelimiter.instances.portScan.timeoutDuration=5s
 
+# Traceroute rate limiter (prevent abuse and protect geolocation API)
+resilience4j.ratelimiter.instances.traceroute.limitForPeriod=10
+resilience4j.ratelimiter.instances.traceroute.limitRefreshPeriod=60s
+resilience4j.ratelimiter.instances.traceroute.timeoutDuration=0s
+
 # Resilience4j Circuit Breaker Configuration
 resilience4j.circuitbreaker.instances.ipApi.registerHealthIndicator=true
-resilience4j.circuitbreaker.instances.ipApi.slidingWindowSize=10
-resilience4j.circuitbreaker.instances.ipApi.minimumNumberOfCalls=5
-resilience4j.circuitbreaker.instances.ipApi.permittedNumberOfCallsInHalfOpenState=3
-resilience4j.circuitbreaker.instances.ipApi.waitDurationInOpenState=30s
-resilience4j.circuitbreaker.instances.ipApi.failureRateThreshold=50
-resilience4j.circuitbreaker.instances.ipApi.slowCallRateThreshold=50
-resilience4j.circuitbreaker.instances.ipApi.slowCallDurationThreshold=5s
+resilience4j.circuitbreaker.instances.ipApi.slidingWindowSize=100
+resilience4j.circuitbreaker.instances.ipApi.minimumNumberOfCalls=50
+resilience4j.circuitbreaker.instances.ipApi.permittedNumberOfCallsInHalfOpenState=10
+resilience4j.circuitbreaker.instances.ipApi.waitDurationInOpenState=10s
+resilience4j.circuitbreaker.instances.ipApi.failureRateThreshold=90
+resilience4j.circuitbreaker.instances.ipApi.slowCallRateThreshold=90
+resilience4j.circuitbreaker.instances.ipApi.slowCallDurationThreshold=10s
 
 # Cache Configuration
 spring.cache.cache-names=geolocalizacao,domainInfo,dnsLookup
